--- a/Front/src/styles/global.css
+++ b/Front/src/styles/global.css
@@ -19,7 +19,7 @@ body {
     min-height: 100vh;
     position: relative;
 
-    background-color: #222;
+    /* background-color: #222; */
     /* Temporal?? */
     color: var(--aux-text-color);
 }
