Se obtiene el id al agregar y se actualiza correctamente

--- a/Front/src/views/Forms/Components/Form/AddButton/AddButton.css
+++ b/Front/src/views/Forms/Components/Form/AddButton/AddButton.css
@@ -11,6 +11,8 @@
     align-items: center;
     justify-content: center;
     transition: background-color 0.3s ease;
+    margin: 0;
+
 }
 
 .add-button:hover {
@@ -20,4 +22,3 @@
 .add-button:active {
     background-color: #004080;
 }
-
