--- a/Front/src/styles/global.css
+++ b/Front/src/styles/global.css
@@ -15,11 +15,10 @@
 }
 
 body {
-    min-width: 100vw;
     min-height: 100vh;
     position: relative;
 
-    /* background-color: #222; */
+    background-color: #222;
     /* Temporal?? */
     color: var(--aux-text-color);
 }
