--- a/Front/src/views/Forms/FormsTemplate.css
+++ b/Front/src/views/Forms/FormsTemplate.css
@@ -17,8 +17,7 @@
 .content {
   flex-grow: 1; /* Ocupa el espacio restante */
   padding: 20px;
-  /* background-color: #f9f9f9; Color de fondo del contenido */
-  background-color: #222;
+  background-color: #f9f9f9;
   color: #fff !important  ;
   overflow-y: auto; /* Permite el desplazamiento vertical si es necesario */
 }
