--- a/Front/src/views/Forms/Components/Form/Indicadores/Indicadores.css
+++ b/Front/src/views/Forms/Components/Form/Indicadores/Indicadores.css
@@ -52,6 +52,10 @@ button:hover {
     z-index: 2;
     padding: 1rem;
     overflow-y: scroll;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
 
 
