--- a/Front/src/styles/global.css
+++ b/Front/src/styles/global.css
@@ -3,7 +3,6 @@
 
 #root {
     all: unset;
-
 }
 
 * {
@@ -17,6 +16,7 @@
 body {
     min-height: 100vh;
     position: relative;
+    overflow-x: hidden;
 
     background-color: #222;
     /* Temporal?? */
