--- a/Front/src/views/Landing/Components/BannerVideo/BannerVideo.module.css
+++ b/Front/src/views/Landing/Components/BannerVideo/BannerVideo.module.css
@@ -1,6 +1,8 @@
 .container {
     height: 100vh;
     max-width: 100vw;
+    margin-bottom: 4em;
+    /*:(*/
 
     position: relative;
 
@@ -9,7 +11,7 @@
     align-items: center;
     gap: 3em;
 
-    
+
     animation: sideIn linear both;
     animation-timeline: view();
     animation-range: entry 40% cover 45%;
@@ -31,7 +33,6 @@
 
 .videoCont {
     width: 100%;
-    height: auto;
     padding: 0 3em;
 
     flex-grow: 1;
@@ -48,11 +49,13 @@
 
 @keyframes sideIn {
     from {
+        pointer-events: none;
         transform: scale(0);
         opacity: 0;
     }
 
     to {
+        pointer-events: auto;
         opacity: 1;
     }
 }
