ajuste en los colores en formtables

--- a/Front/src/styles/global.css
+++ b/Front/src/styles/global.css
@@ -18,9 +18,9 @@ body {
     position: relative;
     overflow-x: hidden;
 
-    background-color: #222;
+    background-color: var(--background-component);
     /* Temporal?? */
-    color: var(--aux-text-color);
+    color: var(--text-color);
 }
 
 button,
