--- a/Front/src/styles/variables.css
+++ b/Front/src/styles/variables.css
@@ -7,12 +7,13 @@
     --aux-first-color: #EBD3F8;
 
     /* Fondos */
-    --background-color: #FFFFFF;
+    --background-color: #333;
+    --background-component:#222;
     --aux-background-color: #ccc;
 
     /* Textos */
-    --text-color: #000000;
-    --aux-text-color: #FFFFFF;
+    --text-color: #FFF;
+    --aux-text-color: #000;
     --disable-text-color: #666666;
     --link-color: #1E88E5;
 
@@ -24,9 +25,14 @@
     --warning-color: #FFC107;
     --info-color: #2196F3;
 
+    --success-color-hv: #078e0b;
+    --error-color-hv: #a51106;
+    --warning-color-hv: #c69504;
+    --info-color-hv: #0072cf;
+
 
     /* Botones y formularios */
-    --input-background-color: #FFFFFF;
+    --input-background-color: #333;
     --input-text-color: #000000;
 
     --button-text-color: #FFFFFF;
