--- a/Front/src/views/Forms/Components/Form/DataTable/DataTable.css
+++ b/Front/src/views/Forms/Components/Form/DataTable/DataTable.css
@@ -8,16 +8,17 @@
 .data-table td {
     padding: 12px;
     text-align: left;
-    border-bottom: 1px solid #ddd;
-    color: black;
+    /* border-bottom: 1px solid white; */
+    background-color: var(--background-component);
+    color:#fff;
 }
 
 .data-table th {
-    background-color: #007bff;
+    background-color: var(--secondary-color);
     color: white;
     font-weight: 600;
 }
 
 .data-table tr:hover {
-    background-color: #f1f1f1;
+    border-bottom: 1px solid var(--aux-first-color);
 }
