--- a/Front/src/views/Forms/Components/Form/Indicadores/Indicadores.css
+++ b/Front/src/views/Forms/Components/Form/Indicadores/Indicadores.css
@@ -7,7 +7,7 @@ header {
 }
 
 button {
-    background-color: #007bff;
+    background-color: var(--info-color);
     color: white;
     border-radius: 5px;
     padding: 12px 32px;
@@ -17,7 +17,7 @@ button {
 
 
 button:hover {
-    background-color: #005bbd;
+    background-color: var(--info-color-hv);
 }
 
 
@@ -32,14 +32,14 @@ button:hover {
     z-index: 9999;
     justify-content: center;
     align-items: center;
-    color: black;
+    color:var(--text-color);
 }
 
 .close-modal {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: gray;
+    background-color: #222;
     opacity: 0.5;
     z-index: 1;
 }
@@ -47,7 +47,7 @@ button:hover {
 .modal-create {
     width: 75%;
     height: 83%;
-    background-color: white;
+    background-color: var(--background-component);
     border-radius: 8px;
     z-index: 2;
     padding: 1rem;
@@ -92,7 +92,7 @@ h4 {
     font-size: 24px;
     display: flex;
     justify-content: center;
-    color: #005bbd;
+    color: var(--text-color);
     margin-bottom: 2rem;
 }
 
