--- a/Front/src/views/Forms/Components/Form/UpdateModal/UpdateModal.css
+++ b/Front/src/views/Forms/Components/Form/UpdateModal/UpdateModal.css
@@ -11,7 +11,7 @@
 }
 
 .modal-content {
-    background: white;
+    background: var(--background-component);
     padding: 20px;
     border-radius: 8px;
     width: 300px;
