--- a/Front/src/views/Forms/Components/Sidebar/Sidebar.css
+++ b/Front/src/views/Forms/Components/Sidebar/Sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
   width: 250px;
   height: 100vh;
-  background-color: #2c3e50;
+  background-color: #222;
   color: white;
   padding: 20px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
@@ -20,14 +20,14 @@
 .sidebar-menu-item {
   padding: 10px;
   margin: 5px 0;
-  background-color: #34495e;
+  background-color: #444;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 .sidebar-menu-item:hover {
-  background-color: #1abc9c;
+  background-color: var(--secondary-color);
 }
 
 .slidebar-hr {
