--- a/Front/src/views/Forms/FormsTemplate.css
+++ b/Front/src/views/Forms/FormsTemplate.css
@@ -7,7 +7,7 @@
 /* Sidebar (ya debería tener sus propios estilos) */
 .sidebar {
   width: 250px; /* Ancho fijo para el sidebar */
-  background-color: #2c3e50; /* Color de fondo del sidebar */
+  background-color: #333; /* Color de fondo del sidebar */
   color: white;
   padding: 20px;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
@@ -17,7 +17,7 @@
 .content {
   flex-grow: 1; /* Ocupa el espacio restante */
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #333;
   color: #fff !important  ;
   overflow-y: auto; /* Permite el desplazamiento vertical si es necesario */
 }
