--- a/Front/src/views/Forms/Components/Form/Indicadores/Indicadores.css
+++ b/Front/src/views/Forms/Components/Form/Indicadores/Indicadores.css
@@ -32,7 +32,7 @@ button:hover {
     z-index: 9999;
     justify-content: center;
     align-items: center;
-    color:var(--text-color);
+    color: var(--text-color);
 }
 
 .close-modal {
@@ -111,7 +111,7 @@ h4 {
 
 .tabla-agregados-container h5 {
     font-size: 1.2rem;
-    color: #2c3e50;
+    color: var(--text-color);
     margin-bottom: 0.5rem;
 }
 
@@ -132,15 +132,15 @@ h4 {
 
 .tabla-agregados-container thead {
     background-color: #3498db;
-    color: white;
+    color: var(--text-color);
 }
 
 .tabla-agregados-container tbody tr:nth-child(even) {
-    background-color: #f4f8fb;
+    background-color: var(--background-component);
 }
 
 .tabla-agregados-container tbody tr:hover {
-    background-color: #ecf0f1;
+    background-color: var(--background-color);
     transition: background-color 0.3s ease;
 }
 
