--- a/Front/src/views/Forms/Components/Form/Indicadores/Indicadores.css
+++ b/Front/src/views/Forms/Components/Form/Indicadores/Indicadores.css
@@ -7,7 +7,7 @@ header {
 }
 
 button {
-    background-color: var(--info-color);
+    background-color: #007bff;
     color: white;
     border-radius: 5px;
     padding: 12px 32px;
@@ -17,7 +17,7 @@ button {
 
 
 button:hover {
-    background-color: var(--info-color-hv);
+    background-color: #005bbd;
 }
 
 
@@ -32,14 +32,14 @@ button:hover {
     z-index: 9999;
     justify-content: center;
     align-items: center;
-    color: var(--text-color);
+    color: black;
 }
 
 .close-modal {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #222;
+    background-color: gray;
     opacity: 0.5;
     z-index: 1;
 }
@@ -47,7 +47,7 @@ button:hover {
 .modal-create {
     width: 75%;
     height: 83%;
-    background-color: var(--background-component);
+    background-color: white;
     border-radius: 8px;
     z-index: 2;
     padding: 1rem;
@@ -92,7 +92,7 @@ h4 {
     font-size: 24px;
     display: flex;
     justify-content: center;
-    color: var(--text-color);
+    color: #005bbd;
     margin-bottom: 2rem;
 }
 
@@ -111,7 +111,7 @@ h4 {
 
 .tabla-agregados-container h5 {
     font-size: 1.2rem;
-    color: var(--text-color);
+    color: #2c3e50;
     margin-bottom: 0.5rem;
 }
 
@@ -132,15 +132,15 @@ h4 {
 
 .tabla-agregados-container thead {
     background-color: #3498db;
-    color: var(--text-color);
+    color: white;
 }
 
 .tabla-agregados-container tbody tr:nth-child(even) {
-    background-color: var(--background-component);
+    background-color: #f4f8fb;
 }
 
 .tabla-agregados-container tbody tr:hover {
-    background-color: var(--background-color);
+    background-color: #ecf0f1;
     transition: background-color 0.3s ease;
 }
 
