--- a/Front/src/views/Login/Login.module.css
+++ b/Front/src/views/Login/Login.module.css
@@ -1,75 +1,53 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .login {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100%;
-    background-color: #222;
+    background-color: #1a3045;
     font-family: 'Arial', sans-serif;
-}
+  }
 
-.login form {
+.login form{
     width: 420px;
     padding: 30px 40px;
-    background-color: #2c2c2c;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
     align-items: center;
-    gap: 1.5em;
+    justify-content: center;
 }
 
-.login h1 {
+.login h1{
     font-size: 36px;
     text-align: center;
-    color: #fff;
 }
 
-.inpCont {
-    display: flex;
-    align-items: center;
-
+.cajatexto{
     position: relative;
     width: 100%;
     height: 50px;
-    margin-top: 1em;
+    margin: 30px 0;
 }
 
-.inpCont label {
-    position: absolute;
-    left: 1em;
-    font-weight: 400;
-    opacity: .5;
-    transition: 500ms;
-}
-
-.inpCont input:focus~label,
-.inpCont input:not(:placeholder-shown)~label {
-    top: -45%;
-    left: 0;
-
-    font-size: 14px;
-    opacity: .8;
-}
-
-.inpCont input {
+.cajatexto input{
     width: 100%;
     height: 100%;
-    background-color: var(--inp-background-color);
-    /* Fondo de inputs más oscuro */
+    background-color:transparent;
     outline: none;
-    border: 2px solid rgba(255, 255, 255, 0.1);
+    border: 2px solid rgba(255,255,255, .2);
     border-radius: 40px;
     font-size: 16px;
     color: #fff;
     padding: 20px 45px 20px 20px;
 }
 
-.inpCont input:focus {
-    border-color: var(--aux-first-color);
+.cajatexto input::placeholder{
+    color: white;
 }
-
 
 .icon {
     position: absolute;
@@ -77,68 +55,55 @@
     top: 35%;
     transform: translate(-50%);
     font-size: 16px;
-    color: #ffffff !important;
 }
 
+.login .recordar{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+}
 
-.login button {
+.recordar label input{
+    accent-color: #fff;
+    margin-right: 4px;
+}
+
+.recordar a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.recordar a:hover{
+    text-decoration: underline;
+}
+
+.login button{
     width: 100%;
     height: 45px;
-    background-color: var(--secondary-color);
-    /* Botón verde para destacar */
+    background-color: #fff;
     border: none;
     outline: none;
     border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    box-shadow:  0 0 10px rgba(0,0,0, .1);
     cursor: pointer;
     font-size: 16px;
-    color: #fff;
+    color: #333;
     font-weight: 700;
-    transition: background-color 0.3s ease;
 }
 
-.login button:hover {
-    background-color: var(--tertiary-color);
-}
-
-.login .RegresarLogin {
+.login .registrarCuenta{
     font-size: 14.5px;
     text-align: center;
     margin: 20px 0 15px;
-    color: #ccc;
 }
 
-.RegresarLogin {
+.registrarCuenta p a {
+    color: #fff;
     text-decoration: none;
     font-weight: 600;
-    cursor: pointer;
-    transition: 200ms;
-
 }
 
-.RegresarLogin a {
-    color: var(--aux-first-color);
-
-    &:hover {
-        color: var(--tertiary-color);
-    }
-}
-
-.backIcon {
-    width: auto;
-    height: auto;
-    padding: 1em;
-
-    font-size: 25px;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    cursor: pointer;
-
-    &:hover{
-        transform: scale(1.1);
-        color: var(--aux-first-color);
-    }
+.registrarCuenta p:hover{
+    text-decoration: underline;
 }
